# difforb

./: .gitignore  .readthedocs.yaml  MANIFEST.in  Makefile  README-pypi.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: publish.yml
difforb/: __init__.py  utils.py
difforb/astrometry/: __init__.py  data.py  debias.py  weight.py
difforb/body/: __init__.py  ephbody.py  gm.py  site.py  smallbody.py
difforb/core/: __init__.py  batch.py  config.py  constants.py  element.py  geo.py  validate.py
difforb/data/: README.md  __init__.py  __main__.py  manager.py  manifest.toml  weights.csv
difforb/dynamics/: __init__.py  dynamic_system.py  two_body.py
difforb/ephemeris/: __init__.py  core.py  generator.py
difforb/integrator/: __init__.py  ias15.py  integrator.py
difforb/od/: __init__.py  events.py  lsq.py  od.py  result.py
difforb/report/: __init__.py  display_units.py  text.py
difforb/spk/: __init__.py  naif.py  spk.py
docs/: difforb-introduction.html  index.md  installation.md  requirements.txt
docs/api/: body.md  core.md  debiasing.md  dynamics.md  eop.md  ephemeris.md  index.md  integrator.md  observation-data.md  od.md  outlier-rejection.md  spk.md  state.md  time.md  weights.md
docs/concepts/: batch-inputs-and-shapes.md  differential-correction.md  dynamical-models.md  earth-orientation-parameters.md  earth-rotation-and-terrestrial-geometry.md  ephemeris-products.md  frames-and-state-representation.md  index.md  initial-orbit-determination.md  keplerian-elements.md  light-time-model.md  outlier-rejection.md  (+6 more)
tests/: __init__.py  assertions.py  test_data_manager.py
(+159 files in other folders)
