[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "difforb"
version = "0.1.1"
description = "Differentiable small-body orbit computation and orbit determination with JAX."
readme = "README-pypi.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Jianhua Cui" },
]
keywords = [
    "astrodynamics",
    "astronomy",
    "automatic-differentiation",
    "ephemeris",
    "jax",
    "orbit-determination",
    "orbit-propagation",
    "small-bodies",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "jax[cpu]>=0.4.30",
    "diffrax>=0.6",
    "equinox>=0.11.7",
    "jaxtyping>=0.2.36",
    "numpy>=1.26",
    "pandas>=2.1",
    "astropy>=6",
    "astropy-healpix>=1.1,<2",
    "jplephem>=2.21,<3",
    "requests>=2.31,<3",
    "typing-extensions>=4.10,<5",
]

[project.urls]
Documentation = "https://difforb.readthedocs.io/en/latest/"
Source = "https://github.com/jianhua-naoc/difforb"
Issues = "https://github.com/jianhua-naoc/difforb/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["difforb", "difforb.*"]
namespaces = true

[tool.setuptools.package-data]
"difforb.data" = [
    "README.md",
    "manifest.toml",
    "weights.csv",
    "dtdb_series/*.npy",
    "iau_cio_locator_series/*.npy",
    "iau_nutation_series/*.npy",
    "obs_code/jpl_radar_codes.txt",
]
